<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.WelcomeScreen">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:text="@string/let_s_shoe"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginTop="@dimen/one_hundred_dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shoes" />

        <TextView
            android:id="@+id/instruction_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_four_dp"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:layout_marginEnd="@dimen/twenty_four_dp"
            android:text="@string/instruction_one"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen_sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instruction_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_four_dp"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:layout_marginEnd="@dimen/twenty_four_dp"
            android:text="@string/instruction_two"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen_sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instruction_one" />

        <Button
            android:id="@+id/welcome_screen"
            style="@style/CustomWelcomeButton"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="56dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginBottom="@dimen/eight_dp"
            android:text="@string/go"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>